--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-
-    <TextView
+    <EditText
+        android:id="@+id/nota1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text=""
+        android:hint="@string/nota1"
+        android:background="@color/gray_light"
+        android:inputType="number"
+        android:maxLength="2"
+        android:gravity="center"
+        android:padding="20dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="50dp"
+        />
+    <EditText
+        android:id="@+id/nota2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:hint="@string/nota2"
+        android:background="@color/gray_light"
+        android:inputType="number"
+        android:maxLength="2"
+        android:gravity="center"
+        android:padding="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="50dp"
+        />
+    <EditText
+        android:id="@+id/nota3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:hint="@string/nota3"
+        android:background="@color/gray_light"
+        android:inputType="number"
+        android:maxLength="2"
+        android:gravity="center"
+        android:padding="20dp"
+        android:layout_below="@+id/nota1"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="50dp"
+        />
+    <EditText
+        android:id="@+id/nota4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:hint="@string/nota4"
+        android:background="@color/gray_light"
+        android:inputType="number"
+        android:maxLength="2"
+        android:gravity="center"
+        android:padding="20dp"
+        android:layout_below="@+id/nota2"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="50dp"
+        android:layout_marginTop="50dp"
+        />
+    <EditText
+        android:id="@+id/faltas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:hint="@string/numero_faltas"
+        android:background="@color/gray_light"
+        android:inputType="number"
+        android:maxLength="2"
+        android:gravity="center"
+        android:padding="20dp"
+        android:layout_below="@+id/nota3"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="50dp"
+        />
+    <Button
+        android:id="@+id/bt_calcular"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/btn_calcular"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        android:textAllCaps="false"
+        android:layout_below="@+id/faltas"
+        android:layout_margin="30dp"
+        android:padding="20dp"
+        android:backgroundTint="@color/gray_dark"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        />
+    <TextView
+        android:id="@+id/txt_resultado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Aluno foi aprovado! "
+        android:layout_below="@+id/bt_calcular"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"
+        android:textStyle="bold"
+
+        />
+
+
+
+</RelativeLayout>
