--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray_light">#CFCFCF</color>
+    <color name="gray_dark">#737373</color>
+    <color name="red">#DD0101</color>
+    <color name="green">#0BE712</color>
 </resources>
